--- a/src/style.css
+++ b/src/style.css
@@ -32,10 +32,12 @@ main{
 }
 
 .search-box .search-bar{
-    display: block;
+    display: flex;
     width: 100%;
-    padding: 15px;
-
+    
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
     color: #313131;
     font-size: 20px;
 
@@ -46,16 +48,39 @@ main{
 
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
     background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 0px 16px 0px 16px;
+    border-radius: 16px;
     transition: 0.4s;
 }
 
-.search-box .search-bar:focus{
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
-    background-color: rgb(255, 255, 255);
-    border-radius:  16px 0px 16px 0px;
+
+.search-box .search-bar .search-input {
+    width: 95%;
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 5px 5px;
+    font-size: 20px;
+    color: #ffffff
 }
-.location-box .location{
+::placeholder{
+    color: #ffffff;
+}
+.search-box .search-bar button img{
+    width: 30px;
+    
+}
+.search-box .search-bar button{
+    width: 5%;
+    border: 0;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    background: none;
+    cursor: pointer;
+}
+
+ .location-box .location{
     color: #fff;
     font-size: 32px;
     font-weight: 500;
@@ -69,11 +94,11 @@ main{
     text-align: center;
     font-style: italic;
 }
-.weather-box{
+ .weather-box{
     text-align: center;
 }
 
-.weather-box .temp{
+ .weather-box .temp{
     display: inline-block;
     padding: 10px 25px;
     color: #fff;
@@ -87,7 +112,7 @@ main{
 
     box-shadow: 3px 6px rgba(0, 0, 0, 0.25);
 }
-.weather-box .weather{
+ .weather-box .weather{
     color: #fff;
     font-size: 48px;
     font-weight: 700;
