--- a/src/style.css
+++ b/src/style.css
@@ -118,3 +118,19 @@ main{
     font-weight: 700;
     font-style: italic;
 }
+
+.response{
+    text-align: center;
+    display: inline-block;
+    padding: 10px 25px;
+    color: #fff;
+    font-size: 50px;
+    font-weight: 900;
+
+    text-shadow: 3px 6px rgba(0, 0, 0, 0.25);
+    
+    border-radius: 16px;
+    margin: 30px 0px;
+
+   
+}
